tests/neg/safe-setting.scala
//> using options -language:experimental.safe

def main() = println("hello") // error